[package]
name = "one_rm_calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
rang = "0.1.1"
wasm-bindgen = "0.2.89"
getrandom = { version = "0.2", features = ["js"] }